[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/font/GloriaHallelujah-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://level/level4.gd" type="Script" id=2]
[ext_resource path="res://map/map.tres" type="TileSet" id=3]
[ext_resource path="res://enemy/enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/TambahPeluru.tscn" type="PackedScene" id=6]
[ext_resource path="res://UI/portal.tscn" type="PackedScene" id=7]
[ext_resource path="res://UI/Heart_Bar.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[node name="level4" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -876.0
margin_top = -433.0
margin_right = 2522.0
margin_bottom = 1241.0
color = Color( 0.215686, 0.00784314, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 39, 39 )
format = 1
tile_data = PoolIntArray( -196618, 0, 0, -196617, 0, 0, -196616, 0, 0, -196615, 0, 0, -196614, 0, 0, -196613, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262144, 0, 0, -262143, 0, 0, -262142, 0, 0, -262141, 0, 0, -262140, 0, 0, -262139, 0, 0, -262138, 0, 0, -262137, 0, 0, -262136, 0, 0, -262135, 0, 0, -262134, 0, 0, -262133, 0, 0, -262132, 0, 0, -262131, 0, 0, -262130, 0, 0, -262129, 0, 0, -262128, 0, 0, -262127, 0, 0, -262126, 0, 0, -262125, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -262120, 0, 0, -262119, 0, 0, -262118, 0, 0, -262117, 0, 0, -262116, 0, 0, -262115, 0, 0, -262114, 0, 0, -262113, 0, 0, -262112, 0, 0, -262111, 0, 0, -262110, 0, 0, -262109, 0, 0, -262108, 0, 0, -262107, 0, 0, -262106, 0, 0, -262105, 0, 0, -262104, 0, 0, -262103, 0, 0, -262102, 0, 0, -262101, 0, 0, -262100, 0, 0, -262099, 0, 0, -262098, 0, 0, -262097, 0, 0, -262096, 0, 0, -262095, 0, 0, -262094, 0, 0, -262093, 0, 0, -262092, 0, 0, -131082, 0, 0, -196607, 0, 0, -196599, 0, 0, -196569, 0, 0, -196563, 0, 0, -196556, 0, 0, -65546, 0, 0, -131071, 0, 0, -131063, 0, 0, -131033, 0, 0, -131027, 0, 0, -131020, 0, 0, -10, 0, 0, -65535, 0, 0, -65527, 0, 0, -65521, 0, 0, -65520, 0, 0, -65519, 0, 0, -65518, 0, 0, -65517, 0, 0, -65516, 0, 0, -65515, 0, 0, -65510, 0, 0, -65509, 0, 0, -65508, 0, 0, -65507, 0, 0, -65506, 0, 0, -65505, 0, 0, -65504, 0, 0, -65503, 0, 0, -65502, 0, 0, -65501, 0, 0, -65497, 0, 0, -65491, 0, 0, -65484, 0, 0, 65526, 0, 0, 1, 0, 0, 9, 0, 0, 15, 0, 0, 35, 0, 0, 39, 0, 0, 45, 0, 0, 52, 0, 0, 131062, 0, 0, 65537, 0, 0, 65545, 0, 0, 65551, 0, 0, 65571, 0, 0, 65575, 0, 0, 65581, 0, 0, 65588, 0, 0, 196598, 0, 0, 131073, 0, 0, 131081, 0, 0, 131107, 0, 0, 131111, 0, 0, 131117, 0, 0, 131124, 0, 0, 262134, 0, 0, 196609, 0, 0, 196614, 0, 0, 196617, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196643, 0, 0, 196647, 0, 0, 196653, 0, 0, 196660, 0, 0, 327670, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262144, 0, 0, 262145, 0, 0, 262150, 0, 0, 262153, 0, 0, 262171, 0, 0, 262179, 0, 0, 262183, 0, 0, 262189, 0, 0, 262196, 0, 0, 393206, 0, 0, 327686, 0, 0, 327689, 0, 0, 327690, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327707, 0, 0, 327719, 0, 0, 327725, 0, 0, 327732, 0, 0, 458742, 0, 0, 393222, 0, 0, 393243, 0, 0, 393255, 0, 0, 393261, 0, 0, 393268, 0, 0, 524278, 0, 0, 458758, 0, 0, 458779, 0, 0, 458791, 0, 0, 458797, 0, 0, 458804, 0, 0, 589814, 0, 0, 524294, 0, 0, 524315, 0, 0, 524320, 0, 0, 524340, 0, 0, 655350, 0, 0, 589835, 0, 0, 589851, 0, 0, 589856, 0, 0, 589876, 0, 0, 720886, 0, 0, 655371, 0, 0, 655387, 0, 0, 655392, 0, 0, 655412, 0, 0, 786422, 0, 0, 720907, 0, 0, 720919, 0, 0, 720920, 0, 0, 720921, 0, 0, 720922, 0, 0, 720923, 0, 0, 720928, 0, 0, 720942, 0, 0, 720943, 0, 0, 720944, 0, 0, 720945, 0, 0, 720946, 0, 0, 720947, 0, 0, 720948, 0, 0, 851958, 0, 0, 851964, 0, 0, 786443, 0, 0, 786449, 0, 0, 786464, 0, 0, 786484, 0, 0, 917494, 0, 0, 917500, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851985, 0, 0, 852000, 0, 0, 852020, 0, 0, 983030, 0, 0, 983036, 0, 0, 917521, 0, 0, 917536, 0, 0, 917543, 0, 0, 917544, 0, 0, 917545, 0, 0, 917546, 0, 0, 917547, 0, 0, 917548, 0, 0, 917556, 0, 0, 1048566, 0, 0, 1048572, 0, 0, 983057, 0, 0, 983072, 0, 0, 983079, 0, 0, 983092, 0, 0, 1114102, 0, 0, 1114108, 0, 0, 1048593, 0, 0, 1048598, 0, 0, 1048608, 0, 0, 1048615, 0, 0, 1048628, 0, 0, 1179638, 0, 0, 1179644, 0, 0, 1114129, 0, 0, 1114134, 0, 0, 1114138, 0, 0, 1114139, 0, 0, 1114140, 0, 0, 1114141, 0, 0, 1114142, 0, 0, 1114143, 0, 0, 1114144, 0, 0, 1114151, 0, 0, 1114164, 0, 0, 1245174, 0, 0, 1245180, 0, 0, 1245181, 0, 0, 1245182, 0, 0, 1245183, 0, 0, 1179648, 0, 0, 1179649, 0, 0, 1179650, 0, 0, 1179651, 0, 0, 1179659, 0, 0, 1179660, 0, 0, 1179661, 0, 0, 1179662, 0, 0, 1179663, 0, 0, 1179664, 0, 0, 1179665, 0, 0, 1179670, 0, 0, 1179687, 0, 0, 1179700, 0, 0, 1310710, 0, 0, 1245206, 0, 0, 1245223, 0, 0, 1245236, 0, 0, 1376246, 0, 0, 1310742, 0, 0, 1310759, 0, 0, 1310772, 0, 0, 1441782, 0, 0, 1376278, 0, 0, 1376295, 0, 0, 1376308, 0, 0, 1507318, 0, 0, 1441814, 0, 0, 1441831, 0, 0, 1441844, 0, 0, 1572854, 0, 0, 1572855, 0, 0, 1572856, 0, 0, 1572857, 0, 0, 1572858, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1572861, 0, 0, 1572862, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507341, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507344, 0, 0, 1507345, 0, 0, 1507346, 0, 0, 1507347, 0, 0, 1507348, 0, 0, 1507349, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507352, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507364, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1507367, 0, 0, 1507368, 0, 0, 1507369, 0, 0, 1507370, 0, 0, 1507371, 0, 0, 1507372, 0, 0, 1507373, 0, 0, 1507374, 0, 0, 1507375, 0, 0, 1507376, 0, 0, 1507377, 0, 0, 1507378, 0, 0, 1507379, 0, 0, 1507380, 0, 0 )

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( -224, 0 )

[node name="enemy" parent="." instance=ExtResource( 4 )]
position = Vector2( -248, 328 )

[node name="enemy2" parent="." instance=ExtResource( 4 )]
position = Vector2( 738, 32 )

[node name="enemy3" parent="." instance=ExtResource( 4 )]
position = Vector2( 954.171, 752.31 )

[node name="TambahPeluru" parent="." instance=ExtResource( 6 )]
position = Vector2( 656, -72 )

[node name="TambahPeluru2" parent="." instance=ExtResource( 6 )]
position = Vector2( 77.8206, 811.149 )

[node name="portal" parent="." instance=ExtResource( 7 )]
position = Vector2( 1944, 808 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Heart_Bar" parent="CanvasLayer" instance=ExtResource( 8 )]
margin_left = 33.0
margin_top = 27.0
margin_right = 73.0
margin_bottom = 67.0

[node name="bullet" type="Label" parent="CanvasLayer"]
margin_left = 226.0
margin_top = 17.0
margin_right = 330.0
margin_bottom = 78.0
custom_fonts/font = SubResource( 1 )
text = "Bullet"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spawn_musuh" type="Timer" parent="."]
wait_time = 10.0
autostart = true
[connection signal="mati" from="player" to="CanvasLayer/Heart_Bar" method="_on_player_mati"]
[connection signal="nembak" from="player" to="." method="_on_player_nembak"]
[connection signal="isi_peluru" from="TambahPeluru" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="player" method="_on_TambahPeluru_isi_peluru"]
[connection signal="isi_peluru" from="TambahPeluru2" to="." method="_on_TambahPeluru_isi_peluru"]
[connection signal="timeout" from="spawn_musuh" to="." method="_on_spawn_musuh_timeout"]
